// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/Breadcrumb Default 1`] = `
.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 12px;
  width: 12px;
  -webkit-flex: 0 0 12px;
  -ms-flex: 0 0 12px;
  flex: 0 0 12px;
  color: inherit;
}

.c4 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c2 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c2 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c6 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c6 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 26px;
  padding: 6px 14px;
  gap: 5px;
  border-radius: 99px;
  background-color: #c1cfe8;
}

.c3 {
  text-transform: uppercase;
  font-size: 11px;
  line-height: 12px;
  white-space: nowrap;
  color: #252525;
}

.c5 {
  color: #828282;
}

.c1 {
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c2 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c2 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c6 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c6 a {
    font-size: 14px;
  }
}

<div
  className="c0"
>
  <a
    className="c1"
    href="/"
  >
    <span
      className="c2 c3"
      style={
        Object {
          "textTransform": "uppercase",
        }
      }
    >
      Famiglie di prodotto
    </span>
  </a>
  <span
    className="c4 c5"
    size="12px"
  >
    <svg
      viewBox="0 0 50 50"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <g
        fill="currentColor"
        fillRule="evenodd"
        transform="matrix(-1 0 0 1 37.722 1)"
      >
        <path
          d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
        />
      </g>
    </svg>
  </span>
  <a
    className="c1"
    href="/"
  >
    <span
      className="c2 c3"
      style={
        Object {
          "textTransform": "uppercase",
        }
      }
    >
      Elettromandrino ATC
    </span>
  </a>
  <span
    className="c4 c5"
    size="12px"
  >
    <svg
      viewBox="0 0 50 50"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <g
        fill="currentColor"
        fillRule="evenodd"
        transform="matrix(-1 0 0 1 37.722 1)"
      >
        <path
          d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
        />
      </g>
    </svg>
  </span>
  <a
    className="c1"
    href="/"
  >
    <span
      className="c2 c3"
      style={
        Object {
          "textTransform": "uppercase",
        }
      }
    >
      ES3 Line
    </span>
  </a>
  <span
    className="c4 c5"
    size="12px"
  >
    <svg
      viewBox="0 0 50 50"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <g
        fill="currentColor"
        fillRule="evenodd"
        transform="matrix(-1 0 0 1 37.722 1)"
      >
        <path
          d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
        />
      </g>
    </svg>
  </span>
  <span
    className="c6 c3"
    style={
      Object {
        "textTransform": "uppercase",
      }
    }
  >
    ES327
  </span>
</div>
`;

exports[`Storyshots Layout/Breadcrumb On Primary 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 12px;
  width: 12px;
  -webkit-flex: 0 0 12px;
  -ms-flex: 0 0 12px;
  flex: 0 0 12px;
  color: inherit;
}

.c5 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c3 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c3 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c7 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c7 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 26px;
  padding: 6px 14px;
  gap: 5px;
  border-radius: 99px;
  background-color: #c1cfe8;
}

.c4 {
  text-transform: uppercase;
  font-size: 11px;
  line-height: 12px;
  white-space: nowrap;
  color: #252525;
}

.c6 {
  color: #828282;
}

.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

.c2 {
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c3 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c3 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c7 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c7 a {
    font-size: 14px;
  }
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": "100%",
      }
    }
  >
    <div
      className="c1"
    >
      <a
        className="c2"
        href="/"
      >
        <span
          className="c3 c4"
          style={
            Object {
              "textTransform": "uppercase",
            }
          }
        >
          Famiglie di prodotto
        </span>
      </a>
      <span
        className="c5 c6"
        size="12px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            fill="currentColor"
            fillRule="evenodd"
            transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path
              d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
            />
          </g>
        </svg>
      </span>
      <a
        className="c2"
        href="/"
      >
        <span
          className="c3 c4"
          style={
            Object {
              "textTransform": "uppercase",
            }
          }
        >
          Elettromandrino ATC
        </span>
      </a>
      <span
        className="c5 c6"
        size="12px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            fill="currentColor"
            fillRule="evenodd"
            transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path
              d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
            />
          </g>
        </svg>
      </span>
      <a
        className="c2"
        href="/"
      >
        <span
          className="c3 c4"
          style={
            Object {
              "textTransform": "uppercase",
            }
          }
        >
          ES3 Line
        </span>
      </a>
      <span
        className="c5 c6"
        size="12px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            fill="currentColor"
            fillRule="evenodd"
            transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path
              d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
            />
          </g>
        </svg>
      </span>
      <span
        className="c7 c4"
        style={
          Object {
            "textTransform": "uppercase",
          }
        }
      >
        ES327
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout/Breadcrumb On Secondary 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 12px;
  width: 12px;
  -webkit-flex: 0 0 12px;
  -ms-flex: 0 0 12px;
  flex: 0 0 12px;
  color: inherit;
}

.c5 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c3 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c3 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c7 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c7 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 26px;
  padding: 6px 14px;
  gap: 5px;
  border-radius: 99px;
  background-color: #c1cfe8;
}

.c4 {
  text-transform: uppercase;
  font-size: 11px;
  line-height: 12px;
  white-space: nowrap;
  color: #252525;
}

.c6 {
  color: #828282;
}

.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

.c2 {
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c3 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c3 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c7 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c7 a {
    font-size: 14px;
  }
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": "100%",
      }
    }
  >
    <div
      className="c1"
    >
      <a
        className="c2"
        href="/"
      >
        <span
          className="c3 c4"
          style={
            Object {
              "textTransform": "uppercase",
            }
          }
        >
          Famiglie di prodotto
        </span>
      </a>
      <span
        className="c5 c6"
        size="12px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            fill="currentColor"
            fillRule="evenodd"
            transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path
              d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
            />
          </g>
        </svg>
      </span>
      <a
        className="c2"
        href="/"
      >
        <span
          className="c3 c4"
          style={
            Object {
              "textTransform": "uppercase",
            }
          }
        >
          Elettromandrino ATC
        </span>
      </a>
      <span
        className="c5 c6"
        size="12px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            fill="currentColor"
            fillRule="evenodd"
            transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path
              d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
            />
          </g>
        </svg>
      </span>
      <a
        className="c2"
        href="/"
      >
        <span
          className="c3 c4"
          style={
            Object {
              "textTransform": "uppercase",
            }
          }
        >
          ES3 Line
        </span>
      </a>
      <span
        className="c5 c6"
        size="12px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            fill="currentColor"
            fillRule="evenodd"
            transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path
              d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
            />
          </g>
        </svg>
      </span>
      <span
        className="c7 c4"
        style={
          Object {
            "textTransform": "uppercase",
          }
        }
      >
        ES327
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout/Breadcrumb Wrap 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 12px;
  width: 12px;
  -webkit-flex: 0 0 12px;
  -ms-flex: 0 0 12px;
  flex: 0 0 12px;
  color: inherit;
}

.c5 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c3 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c3 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c7 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c7 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 26px;
  padding: 6px 14px;
  gap: 5px;
  border-radius: 99px;
  background-color: #c1cfe8;
}

.c4 {
  text-transform: uppercase;
  font-size: 11px;
  line-height: 12px;
  white-space: nowrap;
  color: #252525;
}

.c6 {
  color: #828282;
}

.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

.c2 {
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c3 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c3 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c7 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c7 a {
    font-size: 14px;
  }
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": "380px",
      }
    }
  >
    <div
      className="c1"
    >
      <a
        className="c2"
        href="/"
      >
        <span
          className="c3 c4"
          style={
            Object {
              "textTransform": "uppercase",
            }
          }
        >
          Famiglie di prodotto
        </span>
      </a>
      <span
        className="c5 c6"
        size="12px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            fill="currentColor"
            fillRule="evenodd"
            transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path
              d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
            />
          </g>
        </svg>
      </span>
      <a
        className="c2"
        href="/"
      >
        <span
          className="c3 c4"
          style={
            Object {
              "textTransform": "uppercase",
            }
          }
        >
          Elettromandrino ATC
        </span>
      </a>
      <span
        className="c5 c6"
        size="12px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            fill="currentColor"
            fillRule="evenodd"
            transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path
              d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
            />
          </g>
        </svg>
      </span>
      <a
        className="c2"
        href="/"
      >
        <span
          className="c3 c4"
          style={
            Object {
              "textTransform": "uppercase",
            }
          }
        >
          ES3 Line
        </span>
      </a>
      <span
        className="c5 c6"
        size="12px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            fill="currentColor"
            fillRule="evenodd"
            transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path
              d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
            />
          </g>
        </svg>
      </span>
      <span
        className="c7 c4"
        style={
          Object {
            "textTransform": "uppercase",
          }
        }
      >
        ES327
      </span>
    </div>
  </div>
</div>
`;
